Corrected spacing in forms, added :before to preview.

--- a/pb.css
+++ b/pb.css
@@ -140,6 +140,7 @@ span.question
 input, textarea {margin : 5px;}
 input.text {font-family	: Georgia;}
 input.text, textarea {border : 1px dashed #808080;}
+textarea {width:545px;}
 form.task input.text, form.task textarea {background : #FFD080;}
 form.task input.text:hover, form.task textarea:hover {background : #FFE0A0;}
 form.solution input.text, form.solution textarea {background : #B0E0FF;}
@@ -171,4 +172,12 @@ div.preview
 	border-radius : 5px;
 	background	: #FFF0C0;
 	margin : 5px; padding : 5px;
+}
+div.preview:before
+{
+	content	: "(Vorschau) ";
+	font-family	: Sans-Serif;
+	font-variant: small-caps;
+	font-size	: small;
+	color		: Gray;
 }
